<resources>
    <string name="app_name">Beach</string>

    <string name="chat">Chat</string>
    <string name="is_typing">is typing...</string>
    <string name="conversations">Conversations</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="participants">Participants</string>
    <string name="searchug">Search user or group</string>
    <string name="exit_group">Exit Group</string>
    <string name="go">Go</string>
    <string name="affiliation">Affiliation</string>
    <string name="add_participants">Add Participants</string>
    <string name="report_spam">Report Spam</string>
    <string name="no_rec_msg">You can\'t send message to this group because you\'re no longer a participant. </string>
    <string name="send_this_poll">Send this poll to</string>
    <string name="poll_ques">Write poll question here</string>
    <string name="choose_resp">Choose Response Type</string>
    <string name="mul_choice">Multiple Choice</string>
    <string name="radio_buttons">Single Choice</string>
    <string name="textbox_numeric">Textbox (numeric only)</string>
    <string name="textbox">Textbox</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="add_more_choice">Add more choice</string>
    <string name="poll_text">Recipients of this poll will be shown text box to enter their response.</string>
    <string name="save">Save</string>
    <string name="saveandsend">Save and Send</string>
    <string name="send">Send</string>
    <string name="viewsaved">View saved polls</string>
    <string name="poll_expiry">Poll expiry time</string>
    <string name="tap_to_respond">Tap to respond</string>
    <string name="create_group">Create Group</string>
    <string name="add_participant">Add Participants</string>
    <string name="profile">Profile</string>
    <string name="settingss">settings</string>
    <string name="logout">Logout</string>
    <string-array name="group_type">
        <item>Public</item>
        <item>Private</item>
    </string-array>
</resources>
