<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_50" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollViewPoll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--<EditText
                    android:id="@+id/etSendPollTo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/dimen_size_10"
                    android:background="@drawable/rectangle_gray"
                    android:hint="@string/send_this_poll"
                    android:paddingStart="@dimen/dimen_size_5"
                    android:paddingEnd="@dimen/dimen_size_5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/textview_size_14"/>-->

                <EditText
                    android:id="@+id/etPollQues"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/dimen_size_10"
                    android:background="@drawable/rectangle_gray"
                    android:hint="@string/poll_ques"
                    android:paddingEnd="@dimen/dimen_size_5"
                    android:paddingStart="@dimen/dimen_size_5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/dimen_size_12" />

                <TextView
                    android:id="@+id/tvResponseType"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="@dimen/dimen_size_10"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="@dimen/dimen_size_10"
                    android:text="@string/choose_resp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_size_12" />

                <LinearLayout
                    android:id="@+id/llResponseType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTextBoxMulChoice"
                        android:layout_width="250dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/dimen_size_10"
                        android:layout_marginTop="@dimen/dimen_size_1"
                        android:background="#EFEFEF"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="@dimen/dimen_size_10"
                        android:text="@string/mul_choice"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_size_12" />

                    <TextView
                        android:id="@+id/tvTextBoxRBtn"
                        android:layout_width="250dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/dimen_size_10"
                        android:layout_marginTop="@dimen/dimen_size_1"
                        android:background="#EFEFEF"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="@dimen/dimen_size_10"
                        android:text="@string/radio_buttons"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_size_12" />

                    <TextView
                        android:id="@+id/tvTextBoxNumeric"
                        android:layout_width="250dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/dimen_size_10"
                        android:layout_marginTop="@dimen/dimen_size_1"
                        android:background="#EFEFEF"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="@dimen/dimen_size_10"
                        android:text="@string/textbox_numeric"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_size_12"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tvTextBox"
                        android:layout_width="250dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/dimen_size_10"
                        android:layout_marginTop="@dimen/dimen_size_1"
                        android:background="#EFEFEF"
                        android:gravity="center_vertical|start"
                        android:paddingLeft="@dimen/dimen_size_10"
                        android:text="@string/textbox"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_size_12" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMultipleChoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_size_10"
                    android:layout_marginRight="@dimen/dimen_size_20"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/etOptionOne"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="@dimen/dimen_size_10"
                        android:background="@drawable/rect_send_layout"
                        android:hint="@string/option1"
                        android:paddingLeft="@dimen/dimen_size_5"
                        android:textSize="@dimen/dimen_size_12" />

                    <EditText
                        android:id="@+id/etOptionTwo"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="@dimen/dimen_size_10"
                        android:background="@drawable/rect_send_layout"
                        android:hint="@string/option2"
                        android:paddingLeft="@dimen/dimen_size_5"
                        android:textSize="@dimen/dimen_size_12" />

                    <EditText
                        android:id="@+id/etOptionThree"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="@dimen/dimen_size_10"
                        android:background="@drawable/rect_send_layout"
                        android:hint="@string/option3"
                        android:paddingLeft="@dimen/dimen_size_5"
                        android:textSize="@dimen/dimen_size_12"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/etOptionFour"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="@dimen/dimen_size_10"
                        android:background="@drawable/rect_send_layout"
                        android:hint="@string/option4"
                        android:paddingLeft="@dimen/dimen_size_5"
                        android:textSize="@dimen/dimen_size_12"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnAddMoreChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_size_5"
                        android:layout_marginTop="@dimen/dimen_size_10"
                        android:background="@color/transparent"
                        android:drawableLeft="@mipmap/plusbutton"
                        android:drawablePadding="@dimen/dimen_size_10"
                        android:text="@string/add_more_choice"
                        android:textSize="@dimen/dimen_size_12" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvRecipientMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_size_10"
                    android:background="@drawable/rectangle_gray"
                    android:editable="false"
                    android:gravity="center_vertical|left"
                    android:padding="@dimen/dimen_size_5"
                    android:text="@string/poll_text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/dimen_size_12"
                    android:visibility="gone" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_size_10"
                    android:layout_marginRight="@dimen/dimen_size_10"
                    android:layout_marginTop="@dimen/dimen_size_10"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/poll_expiry"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:padding="@dimen/dimen_size_5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dimen_size_12"/>

                    <Button
                        android:id="@+id/btnPollExpiryTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/black"
                        android:text="00:00:00"
                        android:textSize="@dimen/dimen_size_12" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btnViewSaved"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/dimen_size_10"
                    android:layout_marginRight="@dimen/dimen_size_10"
                    android:layout_marginTop="@dimen/dimen_size_20"
                    android:layout_weight="0.5"
                    android:background="@drawable/blue_corner"
                    android:text="@string/viewsaved"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_size_12" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="@dimen/dimen_size_5"
                    android:layout_marginLeft="@dimen/dimen_size_10"
                    android:layout_marginRight="@dimen/dimen_size_10"
                    android:layout_marginTop="@dimen/dimen_size_20"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/blue_corner"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_size_12" />

                    <Button
                        android:id="@+id/btnSend"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/dimen_size_10"
                        android:layout_weight="0.5"
                        android:background="@drawable/blue_corner"
                        android:text="@string/send"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dimen_size_12" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

</LinearLayout>